@@ -39,6 +39,7 @@ export(py_available)
 export(py_call)
 export(py_capture_output)
 export(py_config)
+export(py_discover_config)
 export(py_get_attr)
 export(py_has_attr)
 export(py_is_null_xptr)
